--- a/Css/styles.css
+++ b/Css/styles.css
@@ -12,6 +12,9 @@ body{
     height: 100%;
 
 }
+.center{
+    text-align: center;
+}
 
 .header {
 
@@ -71,7 +74,7 @@ body{
 
 .main {
     display: grid;
-    margin: 1em;
+    margin-top: 1em;
     grid-gap: 10px;
     grid-template-rows: 100rem, 100rem;
     grid-template-columns: 1fr 4fr;
@@ -90,7 +93,7 @@ body{
 }
 
 .download-github img {
-    height: 270px;
+    height: 200px;
 
 }
 
@@ -109,6 +112,8 @@ body{
 
 footer p{
     background: aqua;
+    margin:1em;
+    padding:2em;
 }
 
 .init {
