--- a/Css/styles.css
+++ b/Css/styles.css
@@ -5,15 +5,38 @@
 }
 body{
     background-color: rgb(240, 236, 236);
+    width:100%; 
 }
 .container {
 
-    width: 100%;
-    height: 100%;
+    width:99%;
+    height:99%;
 
 }
 .center{
     text-align: center;
+}
+.to-top{
+   
+    background: #00974B;
+    border: thin solid #fff;
+    border-radius: 10px;
+    position: fixed;
+    right: 15px;
+    bottom:2px;
+    z-index: 999999999;
+    
+}
+.to-top i{
+    color: #fff;
+    font-size: 1.5em;
+    padding: 10px 10px 10px 7px;
+    -ms-transform: rotate(-45deg); /* IE 9 */
+    -webkit-transform: rotate(-45deg); /* Chrome, Safari, Opera */
+    transform: rotate(-45deg);
+    width: 90px;
+    font-size: 40px;
+
 }
 
 .header {
@@ -24,6 +47,9 @@ body{
     grid-row: inherit;
     grid-row: 1;
     background: rgb(133, 255, 174);
+  
+     
+    
 }
 
 .header-nav {
@@ -63,18 +89,22 @@ body{
     background-color: aqua;
     border-radius: 5px;
 }
+.nav-methods{
+    background: lightcyan;
 
+}
 
 .hero img {
     width: 100%;
     height: 400px;
     border: solid red;
 
+
 }
 
 .main {
     display: grid;
-    margin-top: 1em;
+    
     grid-gap: 10px;
     grid-template-rows: 100rem, 100rem;
     grid-template-columns: 1fr 4fr;
