--- a/Css/styles.css
+++ b/Css/styles.css
@@ -6,6 +6,8 @@
 body{
     background-color: rgb(240, 236, 236);
     width:100%; 
+    margin: 0;
+    padding: 0;
 }
 .container {
 
@@ -104,7 +106,8 @@ body{
 
 .main {
     display: grid;
-    
+    margin-right: 5px;
+    margin-top: 1em;
     grid-gap: 10px;
     grid-template-rows: 100rem, 100rem;
     grid-template-columns: 1fr 4fr;
