--- a/Css/tokensJs.css
+++ b/Css/tokensJs.css
@@ -1,19 +1,19 @@
 
-
-
 .coding {
 
     background: #eee;
     border-left: 5px solid aqua;
     border-radius: 10px;
     padding:7px;
+    max-width: 100%;
     
 
 }
+
 h6{
     font-weight: 200;
     font-style: italic;
-    background: rgb(83, 83, 83);
+    background: rgb(117, 117, 117);
     color:#fff;
 }
 
