--- a/Css/styles.css
+++ b/Css/styles.css
@@ -99,7 +99,8 @@ body{
 .hero img {
     width: 100%;
     height: 400px;
-    border: solid red;
+    border: solid #07fcfc;
+    border-radius: 10px;
 
 
 }
