--- a/Css/methods.css
+++ b/Css/methods.css
@@ -1,3 +1,5 @@
+
+
 .methods2{
 
     text-align: center;
@@ -15,12 +17,24 @@
     font-style: italic;
     display:inline-block;
     font-weight: bold;
+      
+    border: solid #75d8ff 3px;
+    
+  
+}
+.method-cont a :hover {
+    border: solid #75d8ff 4px;
+padding:5px;
+    transition:all .2s; 
+    border-radius: 10px; 
+
+   
 }
 .method-cont{
 
    padding:1em;
    margin-right: 2em;
-    border: solid#20c997 3px;
+    border: solid#75d8ff 3px;
     border-radius: 10px;
 }
 .method-cont p{
